<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_person_24" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_semibold" />

                <TextView
                    android:id="@+id/tv_nohp"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nohp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/iv_trash"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="end|center_vertical"
                    android:src="@drawable/baseline_delete_24" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>